cmake_minimum_required(VERSION 3.8)
project(pure_pursuit)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(control_msgs REQUIRED)
find_package(ackermann_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

# ---------------- Racing Controller Node ----------------
add_executable(racing_controller_node src/racing_controller_node.cpp)
ament_target_dependencies(racing_controller_node
  rclcpp
  control_msgs
  ackermann_msgs
  nav_msgs
  tf2
  tf2_geometry_msgs
  geometry_msgs
)

# ---------------- Install Targets ----------------
install(TARGETS
  racing_controller_node
  DESTINATION lib/${PROJECT_NAME}
)

# ---------------- Python Scripts ----------------
install(PROGRAMS
  scripts/ppo_rl.py
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()

